# ProductAPI/src/main/java/org/ecommerce/productapi/controller/AdminController.java
@@ -1,82 +1,0 @@
-package org.ecommerce.productapi.controller;
-
-import org.ecommerce.productapi.dto.GraphQLRequest;
-import org.ecommerce.productapi.dto.HeaderResponse;
-import org.ecommerce.productapi.dto.order.OrderResponse;
-import org.ecommerce.productapi.dto.perfume.FullPerfumeResponse;
-import org.ecommerce.productapi.dto.perfume.PerfumeRequest;
-import org.ecommerce.productapi.mapper.OrderMapper;
-import org.ecommerce.productapi.mapper.PerfumeMapper;
-import org.ecommerce.productapi.service.graphql.GraphQLProvider;
-import graphql.ExecutionResult;
-import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.web.PageableDefault;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.validation.BindingResult;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import java.util.List;
-
-import static org.ecommerce.productapi.constants.PathConstants.*;
-
-@RestController
-@RequiredArgsConstructor
-@PreAuthorize("hasAuthority('ADMIN')")
-@RequestMapping(API_V1_ADMIN)
-public class AdminController {
-
-    private final PerfumeMapper perfumeMapper;
-    private final OrderMapper orderMapper;
-    private final GraphQLProvider graphQLProvider;
-
-    @PostMapping(ADD)
-    public ResponseEntity<FullPerfumeResponse> addPerfume(@RequestPart(name = "file", required = false) MultipartFile file,
-                                                          @RequestPart("perfume") @Valid PerfumeRequest perfume,
-                                                          BindingResult bindingResult) {
-        return ResponseEntity.ok(perfumeMapper.savePerfume(perfume, file, bindingResult));
-    }
-
-    @PostMapping(EDIT)
-    public ResponseEntity<FullPerfumeResponse> updatePerfume(@RequestPart(name = "file", required = false) MultipartFile file,
-                                                             @RequestPart("perfume") @Valid PerfumeRequest perfume,
-                                                             BindingResult bindingResult) {
-        return ResponseEntity.ok(perfumeMapper.savePerfume(perfume, file, bindingResult));
-    }
-
-    @DeleteMapping(DELETE_BY_PERFUME_ID)
-    public ResponseEntity<String> deletePerfume(@PathVariable Long perfumeId) {
-        return ResponseEntity.ok(perfumeMapper.deletePerfume(perfumeId));
-    }
-
-    @GetMapping(ORDERS)
-    public ResponseEntity<List<OrderResponse>> getAllOrders(@PageableDefault(size = 10) Pageable pageable) {
-        HeaderResponse<OrderResponse> response = orderMapper.getAllOrders(pageable);
-        return ResponseEntity.ok().headers(response.getHeaders()).body(response.getItems());
-    }
-
-    @GetMapping(ORDER_BY_EMAIL)
-    public ResponseEntity<List<OrderResponse>> getUserOrdersByEmail(@PathVariable String userEmail, 
-                                                                    @PageableDefault(size = 10) Pageable pageable) {
-        HeaderResponse<OrderResponse> response = orderMapper.getUserOrders(userEmail, pageable);
-        return ResponseEntity.ok().headers(response.getHeaders()).body(response.getItems());
-    }
-
-    @DeleteMapping(ORDER_DELETE)
-    public ResponseEntity<String> deleteOrder(@PathVariable Long orderId) {
-        return ResponseEntity.ok(orderMapper.deleteOrder(orderId));
-    }
-
-    @PostMapping(GRAPHQL_ORDERS)
-    public ResponseEntity<ExecutionResult> getAllOrdersQuery(@RequestBody GraphQLRequest request) {
-        return ResponseEntity.ok(graphQLProvider.getGraphQL().execute(request.getQuery()));
-    }
-
-    @PostMapping(GRAPHQL_ORDER)
-    public ResponseEntity<ExecutionResult> getUserOrdersByEmailQuery(@RequestBody GraphQLRequest request) {
-        return ResponseEntity.ok(graphQLProvider.getGraphQL().execute(request.getQuery()));
-    }
-}
